--- a/CSS题目/test.html
+++ b/CSS题目/test.html
@@ -1,5 +1,11 @@
-<div>
-	<span>第一个span元素</span>
-	<p>第一个p元素</p>
-	<p>第二个p元素</p>
+<style>
+  .bfc p {
+    color: #fc0;
+  }
+  .ovh p {
+    color: #f60;
+  }
+</style>
+<div class="bfc ovh">
+  <p>文字颜色</p>
 </div>
